@@ -4,15 +4,19 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
 
+import javax.persistence.CascadeType;
 import javax.persistence.Entity;
+import javax.persistence.FetchType;
 import javax.persistence.Inheritance;
 import javax.persistence.InheritanceType;
 import javax.persistence.ManyToOne;
 import javax.persistence.OneToMany;
 import javax.persistence.Table;
 
+import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
 
 /**
  * Purchase of a collection of tickets
@@ -22,6 +26,7 @@ import lombok.EqualsAndHashCode;
 @Entity @Table(name = "tckt_t_purchase")
 @Inheritance(strategy=InheritanceType.TABLE_PER_CLASS)
 @Data @EqualsAndHashCode(callSuper=false)
+@AllArgsConstructor @NoArgsConstructor
 public class Purchase extends BusinessEntity {
 	private Date date;
 	private Double totalAmount;
@@ -29,6 +34,7 @@ public class Purchase extends BusinessEntity {
 	@ManyToOne
 	private Discount discount;
 	
-	@OneToMany
+	// TODO remove cascade={CascadeType.ALL (for the time being only for test purposes)
+	@OneToMany (cascade={CascadeType.ALL}, fetch = FetchType.EAGER)
 	private List<Ticket> ticketList = new ArrayList<>();
 }
