@@ -5,8 +5,10 @@ import javax.persistence.Inheritance;
 import javax.persistence.InheritanceType;
 import javax.persistence.Table;
 
+import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
 
 /**
  * Service to which the ticket refers
@@ -16,6 +18,7 @@ import lombok.EqualsAndHashCode;
 @Entity @Table(name = "tckt_t_service")
 @Inheritance(strategy=InheritanceType.TABLE_PER_CLASS)
 @Data @EqualsAndHashCode(callSuper=false)
+@NoArgsConstructor @AllArgsConstructor
 public class Service extends BusinessEntity {
 	private String name;
 	private Double price;
