@@ -8,8 +8,10 @@ import javax.persistence.InheritanceType;
 import javax.persistence.OneToOne;
 import javax.persistence.Table;
 
+import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.EqualsAndHashCode;
+import lombok.NoArgsConstructor;
 
 /**
  * Subscriber of a service for a period
@@ -20,6 +22,7 @@ import lombok.EqualsAndHashCode;
 @Entity @Table(name = "tckt_t_subscriber")
 @Inheritance(strategy=InheritanceType.TABLE_PER_CLASS)
 @Data @EqualsAndHashCode(callSuper=false)
+@NoArgsConstructor @AllArgsConstructor
 public class Subscriber extends BusinessEntity {
 	
 	private String firstName;
