@@ -10,7 +10,7 @@ db.username=sa
 db.password=
 
 #Hibernate Configuration
-hibernate.createDb=true
+hibernate.createDb=false
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 hibernate.format_sql=true
 hibernate.ejb.naming_strategy=it.whitebox.event.integration.db.TcktNamingStrategy
