@@ -1,5 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<con:soapui-project id="5ee598c4-3b5a-4ae9-aedf-69a9c8baa171" activeEnvironment="Default" name="REST service" resourceRoot="" soapui-version="5.2.1" abortOnError="false" runType="SEQUENTIAL" xmlns:con="http://eviware.com/soapui/config"><con:settings/><con:interface xsi:type="con:RestService" id="2e3e654f-ae58-48e0-8a9b-25ee14ab49d2" wadlVersion="http://wadl.dev.java.net/2009/02" name="http://localhost:8080" type="rest" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"><con:settings/><con:definitionCache/><con:endpoints><con:endpoint>http://localhost:8080</con:endpoint></con:endpoints><con:resource name="listSubscriptions" path="/ticket/api/subscription/list" id="424de3f3-0404-44ad-a22b-83b3c4758496"><con:settings/><con:parameters/><con:method name="listSubscriptions" id="d0694eec-bf45-4709-bcec-b9066fe679b4" method="GET"><con:settings/><con:parameters/><con:representation type="RESPONSE"><con:mediaType>application/json</con:mediaType><con:status>200</con:status><con:params/><con:element xmlns:list="http://localhost/ticket/api/subscription/list">list:Response</con:element></con:representation><con:request name="Request 1" id="7240bc27-09fc-486a-8959-113ccdd7b206" mediaType="application/json"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request/><con:originalUri>http://localhost/ticket/api/subscription/list</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters/><con:parameterOrder/></con:request></con:method></con:resource><con:resource name="listPurchases" path="/ticket/api/purchase/list" id="424de3f3-0404-44ad-a22b-83b3c4758496"><con:settings/><con:parameters><con:parameter><con:name>startDate</con:name><con:value/><con:style>QUERY</con:style><con:default/><con:description xsi:nil="true"/></con:parameter><con:parameter><con:name>endDate</con:name><con:value/><con:style>QUERY</con:style><con:default/><con:description xsi:nil="true"/></con:parameter></con:parameters><con:method name="listPurchases" id="d0694eec-bf45-4709-bcec-b9066fe679b4" method="GET"><con:settings/><con:parameters/><con:representation type="RESPONSE"><con:mediaType>application/json</con:mediaType><con:status>200</con:status><con:params/><con:element xmlns:list="http://localhost/ticket/api/subscription/list">list:Response</con:element></con:representation><con:representation type="RESPONSE"><con:mediaType>text/html;charset=ISO-8859-1</con:mediaType><con:status>200</con:status><con:params/><con:element>html</con:element></con:representation><con:request name="Request 1" id="7240bc27-09fc-486a-8959-113ccdd7b206" mediaType="application/json"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request/><con:originalUri>http://localhost/ticket/api/subscription/list</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters>
+<con:soapui-project id="5ee598c4-3b5a-4ae9-aedf-69a9c8baa171" activeEnvironment="Default" name="REST service" resourceRoot="" soapui-version="5.2.1" abortOnError="false" runType="SEQUENTIAL" xmlns:con="http://eviware.com/soapui/config"><con:settings/><con:interface xsi:type="con:RestService" id="2e3e654f-ae58-48e0-8a9b-25ee14ab49d2" wadlVersion="http://wadl.dev.java.net/2009/02" name="http://localhost:8080" type="rest" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"><con:settings/><con:definitionCache type="TEXT" rootPart=""/><con:endpoints><con:endpoint>http://localhost:8080</con:endpoint></con:endpoints><con:resource name="listSubscriptions" path="/ticket/api/subscription/list" id="424de3f3-0404-44ad-a22b-83b3c4758496"><con:settings/><con:parameters/><con:method name="listSubscriptions" id="d0694eec-bf45-4709-bcec-b9066fe679b4" method="GET"><con:settings/><con:parameters/><con:representation type="RESPONSE"><con:mediaType>application/json</con:mediaType><con:status>200</con:status><con:params/><con:element xmlns:list="http://localhost/ticket/api/subscription/list">list:Response</con:element></con:representation><con:request name="Request 1" id="7240bc27-09fc-486a-8959-113ccdd7b206" mediaType="application/json"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request/><con:originalUri>http://localhost/ticket/api/subscription/list</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters/><con:parameterOrder/></con:request></con:method></con:resource><con:resource name="listPurchases" path="/ticket/api/purchase/list" id="424de3f3-0404-44ad-a22b-83b3c4758496"><con:settings/><con:parameters><con:parameter><con:name>startDate</con:name><con:value/><con:style>QUERY</con:style><con:default/><con:description xsi:nil="true"/></con:parameter><con:parameter><con:name>endDate</con:name><con:value/><con:style>QUERY</con:style><con:default/><con:description xsi:nil="true"/></con:parameter></con:parameters><con:method name="listPurchases" id="d0694eec-bf45-4709-bcec-b9066fe679b4" method="GET"><con:settings/><con:parameters/><con:representation type="RESPONSE"><con:mediaType>application/json</con:mediaType><con:status>200</con:status><con:params/><con:element xmlns:list="http://localhost/ticket/api/subscription/list">list:Response</con:element></con:representation><con:representation type="RESPONSE"><con:mediaType>text/html;charset=ISO-8859-1</con:mediaType><con:status>200</con:status><con:params/><con:element>html</con:element></con:representation><con:representation type="RESPONSE"><con:mediaType xsi:nil="true"/><con:status>0</con:status><con:params/><con:element>data</con:element></con:representation><con:representation type="FAULT"><con:mediaType>text/html;charset=utf-8</con:mediaType><con:status>500</con:status><con:params/><con:element>html</con:element></con:representation><con:request name="Request 1" id="7240bc27-09fc-486a-8959-113ccdd7b206" mediaType="application/json"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request/><con:originalUri>http://localhost/ticket/api/subscription/list</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters>
   <con:entry key="startDate" value="12-12-2015"/>
-  <con:entry key="endDate" value="13-12-2015"/>
-</con:parameters><con:parameterOrder><con:entry>startDate</con:entry><con:entry>endDate</con:entry></con:parameterOrder></con:request></con:method></con:resource></con:interface><con:properties/><con:wssContainer/><con:oAuth2ProfileContainer/></con:soapui-project>
+  <con:entry key="endDate" value="13-12-2016"/>
+</con:parameters><con:parameterOrder><con:entry>startDate</con:entry><con:entry>endDate</con:entry></con:parameterOrder></con:request></con:method></con:resource><con:resource name="purchase" path="/ticket/api/purchase" id="4a0886c3-0bca-4e14-8c8f-23f5f0da4ebc"><con:settings/><con:parameters/><con:method name="create" id="5928c493-4a8a-41c9-baab-1b19e20bd1e3" method="POST"><con:settings/><con:parameters/><con:representation type="RESPONSE"><con:mediaType>application/json</con:mediaType><con:status>200</con:status><con:params/><con:element xmlns:pur="http://localhost/ticket/api/purchase">pur:Response</con:element></con:representation><con:representation type="REQUEST"><con:mediaType>application/json</con:mediaType><con:params/></con:representation><con:representation type="RESPONSE"><con:mediaType xsi:nil="true"/><con:status>0</con:status><con:params/><con:element>data</con:element></con:representation><con:representation type="RESPONSE"><con:mediaType>text/html;charset=ISO-8859-1</con:mediaType><con:status>200</con:status><con:params/><con:element>html</con:element></con:representation><con:representation type="FAULT"><con:mediaType>text/html;charset=utf-8</con:mediaType><con:status>404</con:status><con:params/><con:element>html</con:element></con:representation><con:request name="create raw purchase (no rels)" id="0de2f70c-afa1-4ccd-820c-7138bbf92ee6" mediaType="application/json" postQueryString="false"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request>{
+    "date": 1450372063540,
+
+    "id": null,
+    "ticketList": [
+        {
+            "buyerName": "goofy",
+            "date": 1450372063540
+            
+            
+        }
+    ],
+    "totalAmount": 123.33
+}
+</con:request><con:originalUri>http://localhost/ticket/api/purchase</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters/></con:request><con:request name="Request 2" id="0de2f70c-afa1-4ccd-820c-7138bbf92ee6" mediaType="application/json" postQueryString="false"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request>{
+  "id" : null,
+  "date" : 1450372063540,
+  "totalAmount" : 123.33,
+  "discount" : {
+    "id" : null,
+    "name" : "discount",
+    "description" : "disc desc",
+    "amount" : 12.33,
+    "percentage" : 1.02
+  },
+  "ticketList" : [ {
+    "id" : null,
+    "date" : 1450372063540,
+    "buyerName" : "goofy",
+    "subscriber" : {
+      "id" : null,
+      "firstName" : "Mario",
+      "lastName" : "Rossi",
+      "birthDate" : 1450372063539,
+      "telephoneNumber" : "123",
+      "subscription" : {
+        "id" : null,
+        "date" : 1450372063538,
+        "progressiveNumber" : 1
+      }
+    },
+    "service" : {
+      "id" : null,
+      "name" : "service name",
+      "price" : 12.33
+    }
+  } ]
+}
+</con:request><con:originalUri>http://localhost/ticket/api/purchase</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters/></con:request></con:method></con:resource><con:resource name="subscription" path="/ticket/api/subscription" id="34df7214-22a2-433b-a690-1bfcfd3f4030"><con:settings/><con:parameters/><con:method name="Method 1" id="fdb72c62-cfc0-47c2-a2f8-0fcf25f40548" method="POST"><con:settings/><con:parameters/><con:representation type="REQUEST"><con:mediaType>application/json</con:mediaType><con:params/></con:representation><con:representation type="RESPONSE"><con:mediaType>application/json</con:mediaType><con:status>200</con:status><con:params/><con:element xmlns:sub="http://localhost/ticket/api/subscription">sub:Response</con:element></con:representation><con:request name="create subscription" id="99315ad3-6361-4fe3-861b-b7836db09a49" mediaType="application/json" postQueryString="false"><con:settings><con:setting id="com.eviware.soapui.impl.wsdl.WsdlRequest@request-headers">&lt;xml-fragment/></con:setting></con:settings><con:endpoint>http://localhost:8080</con:endpoint><con:request>{
+  "id" : null,
+  "date" : 1450445159561,
+  "progressiveNumber" : 1
+}</con:request><con:originalUri>http://localhost/ticket/api/subscription</con:originalUri><con:credentials><con:authType>No Authorization</con:authType></con:credentials><con:jmsConfig JMSDeliveryMode="PERSISTENT"/><con:jmsPropertyConfig/><con:parameters/></con:request></con:method></con:resource></con:interface><con:properties/><con:wssContainer/><con:oAuth2ProfileContainer/></con:soapui-project>
